monitoreo/05-grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoreo
spec:
  selector: 
    app: grafana
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
