monitoreo/11-influxdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: monitoreo
spec:
  selector:
    app: influxdb
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8086
    targetPort: 8086
