monitoreo/06-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoreo
spec:
  rules:
  - host: grafana.internal.local.com
    http:
      paths:
      - path: /
        backend:
         serviceName: grafana
         servicePort: 3000
